# bank_app

./: README.md  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  signals.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_balance.py
api/: authentications.py  urls.py  validators.py
api/serializers/: __init__.py  accounts.py  transactions.py
api/views/: __init__.py  accounts.py  transactions.py
app/: settings.py
core/: celery.py  constants.py
core/django_config/: asgi.py  settings.py  wsgi.py
services/: tasks.py  transactions.py  utils.py
transactions/: apps.py  models.py  services.py  signals.py  validators.py
transactions/migrations/: 0001_initial.py  0002_initial.py  0002_transaction_status.py  0003_remove_transaction_currency.py  0003_rename_status_transaction_status_id.py
user/: admin.py  models.py
user/migrations/: 0001_initial.py
